--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.cerus</groupId>
     <artifactId>simple-nbt</artifactId>
-    <version>1.1.6-DEBUG-1</version>
+    <version>1.1.7</version>
 
     <build>
         <plugins>
