Remove unnecessary information

--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,7 @@
         <developer>
             <name>Maximilian Dorn</name>
             <email>m.dorn.2003@web.de</email>
-            <organization>PypeWare GmbH</organization>
-            <organizationUrl>https://github.com/pypeware</organizationUrl>
+            <url>https://cerus.dev</url>
         </developer>
     </developers>
 
